# slint_temp_converter

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: TempConv.slint
ui/components/: ErrorDialog.slint
