[package]
name = "tempconverter"
version = "0.3.0"
authors = ["Connor Youngs <email@connoryoungs.com>"]
edition = "2021"
build = "build.rs"
description = "A desktop app for converting temperature"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3"

[build-dependencies]
slint-build = "1.3"

[package.metadata.bundle]
name = "Temperature Converter"
identifier = "io.github.Youngsie1997.tempconv"
description = "A desktop app for converting temperature"
icon = ["./icon.png", "/icon@2x.png"]
