[package]
name = "tempconverter"
version = "2.0.0"
authors = ["Connor Youngs <email@connoryoungs.com>"]
edition = "2021"
build = "build.rs"
description = "A desktop app for converting temperature"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4.1"

[build-dependencies]
slint-build = "1.4.1"

[package.metadata.bundle]
name = "Temperature Converter"
identifier = "com.github.Youngsie1997.slint_temp_converter"
description = "A desktop app for converting temperature"
icon = ["./icon.png"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
